--- a/user-panel/package.json
+++ b/user-panel/package.json
@@ -36,6 +36,7 @@
     "@vue/cli-plugin-eslint": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
     "babel-plugin-component": "^1.1.1",
+    "copy-to-clipboard": "^3.2.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.6",
