added proper key

--- a/user-panel/firebase.json
+++ b/user-panel/firebase.json
@@ -9,7 +9,8 @@
     ],
     "rewrites": [
       {
-        "source": "**",
+        "source": "/api/v1**",
+        "function": "webApi",
         "destination": "/index.html"
       }
     ]
