--- a/user-panel/package.json
+++ b/user-panel/package.json
@@ -11,6 +11,7 @@
     "@pencilpix/vue2-clock-picker": "^0.1.6",
     "@tygr/vue-time-picker": "^1.0.9",
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.27",
     "bootstrap-vue-datatable": "^1.0.7",
