--- a/user-panel/firebase.json
+++ b/user-panel/firebase.json
@@ -1,7 +1,7 @@
 {
   "hosting": {
     "public": "dist",
-    "site": "sparc-test-elin",
+    "site": "sparc-test-408",
     "ignore": [
       "firebase.json",
       "**/.*",
