fixed filtering and added animations

--- a/user-panel/package.json
+++ b/user-panel/package.json
@@ -25,6 +25,7 @@
     "vue-ctk-date-time-picker": "^2.2.0",
     "vue-lazy-load": "^0.0.7",
     "vue-lazyload": "^1.2.6",
+    "vue-lottie": "^0.2.1",
     "vue-multiselect": "^2.1.6",
     "vue-read-more": "^1.1.1",
     "vue-router": "^3.0.2",
