--- a/user-panel/package.json
+++ b/user-panel/package.json
@@ -31,8 +31,10 @@
     "vue-read-more": "^1.1.1",
     "vue-router": "^3.0.2",
     "vue-star-rating": "^1.6.1",
+    "vue-stepper": "^1.4.2",
     "vue-stripe-checkout": "^3.0.0-beta.11",
     "vue2-transitions": "^0.2.3",
+    "vuelidate": "^0.7.4",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
