--- a/user-panel/package.json
+++ b/user-panel/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "jest"
   },
   "dependencies": {
     "@pencilpix/vue2-clock-picker": "^0.1.6",
@@ -41,10 +42,25 @@
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-eslint": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "babel-plugin-component": "^1.1.1",
+    "jest": "^24.9.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
+    "vue-jest": "^3.0.5",
     "vue-template-compiler": "^2.6.6",
     "vuejs-timepicker": "git+https://github.com/xxRockOnxx/vue2-timepicker.git"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "vue"
+    ],
+    "transform": {
+      "^.+\\.vue$": "vue-jest"
+    }, 
+    "collectCoverage": true,
+    "collectCoverageFrom": ["**/*.{js,vue}", "!**/node_modules/**"]
   }
 }
