--- a/user-panel/package.json
+++ b/user-panel/package.json
@@ -43,6 +43,7 @@
     "@vue/cli-plugin-eslint": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
     "@vue/test-utils": "^1.0.0-beta.29",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-component": "^1.1.1",
     "jest": "^24.9.0",
     "node-sass": "^4.11.0",
@@ -59,8 +60,11 @@
     ],
     "transform": {
       "^.+\\.vue$": "vue-jest"
-    }, 
+    },
     "collectCoverage": true,
-    "collectCoverageFrom": ["**/*.{js,vue}", "!**/node_modules/**"]
+    "collectCoverageFrom": [
+      "**/*.{js,vue}",
+      "!**/node_modules/**"
+    ]
   }
 }
