--- a/user-panel/package.json
+++ b/user-panel/package.json
@@ -43,7 +43,15 @@
     "@vue/cli-plugin-eslint": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
     "@vue/test-utils": "^1.0.0-beta.29",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-module-resolver": "^2.7.1",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-env": "^1.3.2",
+    "babel-preset-stage-2": "^6.22.0",
+    "babel-register": "^6.22.0",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^24.9.0",
     "babel-plugin-component": "^1.1.1",
     "jest": "^24.9.0",
     "node-sass": "^4.11.0",
@@ -59,7 +67,8 @@
       "vue"
     ],
     "transform": {
-      "^.+\\.vue$": "vue-jest"
+      "^.+\\.vue$": "vue-jest",
+      "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
     },
     "collectCoverage": true,
     "collectCoverageFrom": [
