--- a/user-panel/package.json
+++ b/user-panel/package.json
@@ -9,6 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/core": "^7.6.4",
     "@pencilpix/vue2-clock-picker": "^0.1.6",
     "@tygr/vue-time-picker": "^1.0.9",
     "axios": "^0.19.0",
@@ -39,6 +40,7 @@
     "vuex": "^3.1.1"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-object-rest-spread": "^7.2.0",
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-eslint": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
@@ -50,7 +52,6 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
     "babel-plugin-component": "^1.1.1",
     "jest": "^24.9.0",
@@ -60,7 +61,13 @@
     "vue-template-compiler": "^2.6.6",
     "vuejs-timepicker": "git+https://github.com/xxRockOnxx/vue2-timepicker.git"
   },
+  "resolutions": {
+    "babel-core": "7.0.0-bridge.0"
+  },
   "jest": {
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    },
     "moduleFileExtensions": [
       "js",
       "json",
