--- a/user-panel/package.json
+++ b/user-panel/package.json
@@ -9,7 +9,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "@babel/core": "^7.6.4",
     "@pencilpix/vue2-clock-picker": "^0.1.6",
     "@tygr/vue-time-picker": "^1.0.9",
     "axios": "^0.19.0",
@@ -40,20 +39,22 @@
     "vuex": "^3.1.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.2",
     "@babel/plugin-syntax-object-rest-spread": "^7.2.0",
+    "@babel/preset-env": "^7.7.1",
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-eslint": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
     "@vue/test-utils": "^1.0.0-beta.29",
     "babel-eslint": "^7.1.1",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-component": "^1.1.1",
     "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "babel-jest": "^24.9.0",
-    "babel-plugin-component": "^1.1.1",
     "jest": "^24.9.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
