--- a/user-panel/src/.babelrc
+++ b/user-panel/src/.babelrc
@@ -2,7 +2,7 @@
     "presets": [["@babel/preset-env", { "modules": false }]],
     "env": {
       "test": {
-        "plugins": ["@babel/plugin-syntax-object-rest-spread", "@babel/polyfill"],
+        "plugins": ["@babel/plugin-syntax-object-rest-spread", "module:@babel/polyfill"],
         "presets": [["@babel/preset-env", { "targets": { "node": "9" } }]]
       }
     }
