--- a/user-panel/package.json
+++ b/user-panel/package.json
@@ -9,7 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@babel/core": "^7.6.4",
+    "babel-core": "^7.0.0-bridge.0",
     "@pencilpix/vue2-clock-picker": "^0.1.6",
     "@tygr/vue-time-picker": "^1.0.9",
     "axios": "^0.19.0",
