--- a/user-panel/src/.babelrc
+++ b/user-panel/src/.babelrc
@@ -1,9 +1,9 @@
 {
-    "presets": [["@babel/preset-env", { "modules": false }]],
-    "env": {
-      "test": {
-        "plugins": ["@babel/plugin-syntax-object-rest-spread"],
-        "presets": [["@babel/preset-env", { "targets": { "node": "9" } }]]
-      }
+  "presets": [["@babel/preset-env", { "modules": false }]],
+  "env": {
+    "test": {
+      "plugins": ["@babel/plugin-syntax-object-rest-spread"],
+      "presets": [["@babel/preset-env", { "targets": { "node": "current" },  "useBuiltIns": "usage", "debug": true, "corejs": 3 } ]]
     }
   }
+}
