--- a/user-panel/package.json
+++ b/user-panel/package.json
@@ -24,6 +24,8 @@
     "core-js": "^2.6.10",
     "element-ui": "^2.5.4",
     "firebase": "^6.3.4",
+    "firebase-admin": "^8.8.0",
+    "firebase-functions": "^3.3.0",
     "moment": "^2.24.0",
     "native-toast": "^2.0.0",
     "nouislider": "^11.1.0",
