Redid Past Engagements page, Upcoming Engagements page, and Profile page. Attempted to resolve browser compatibility issues but still does not work. Closes #137

--- a/user-panel/firebase.json
+++ b/user-panel/firebase.json
@@ -1,7 +1,7 @@
 {
   "hosting": {
     "public": "dist",
-    "site": "sparc-test-lizzet",
+    "site": "sparc-test-katelyn",
     "ignore": [
       "firebase.json",
       "**/.*",
