--- a/user-panel/functions/package.json
+++ b/user-panel/functions/package.json
@@ -12,6 +12,7 @@
     "node": "8"
   },
   "dependencies": {
+    "autoprefixer": "^6.5.4"
     "@sendgrid/mail": "^6.4.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -25,5 +26,8 @@
   "devDependencies": {
     "firebase-functions-test": "^0.1.6"
   },
+  "browserslist": [
+    "defaults"
+  ]
   "private": true
 }
