--- a/user-panel/package.json
+++ b/user-panel/package.json
@@ -15,7 +15,9 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.27",
     "bootstrap-vue-datatable": "^1.0.7",
+    "debug": "^4.1.1",
     "element-ui": "^2.5.4",
+    "es6-promise": "^4.2.8",
     "firebase": "^6.3.4",
     "moment": "^2.24.0",
     "native-toast": "^2.0.0",
@@ -38,6 +40,7 @@
     "vuex": "^3.1.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.7.1",
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-eslint": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
