--- a/user-panel/package.json
+++ b/user-panel/package.json
@@ -34,6 +34,7 @@
     "v-clipboard": "^2.2.2",
     "vee-validate": "^3.0.11",
     "vue": "^2.6.10",
+    "vue-cropperjs": "^4.0.1",
     "vue-ctk-date-time-picker": "^2.2.0",
     "vue-froala-wysiwyg": "^3.0.6",
     "vue-google-api": "^0.2.0",
