--- a/user-panel/firebase.json
+++ b/user-panel/firebase.json
@@ -2,7 +2,7 @@
   "hosting": {
     "public": "dist",
 
-    "site": "sparc-test-elin",
+    "site": "sparc-test-lizzet",
 
     "ignore": [
       "firebase.json",
